add docs info
