# routes/api/auth.js
@@ -25,7 +25,7 @@ router.get("/current", authenticate, ctrlWrapper(ctrl.getCurrent));
 // avatar
 router.patch('/avatar', authenticate, uploadAva.single('avatar'), ctrlWrapper(ctrl.updateAvatar));
 
-router.patch('/shopping-list', authenticate, validateBody(schemas.shoppingSchema), ctrlWrapper(ctrl.addToShoppingList));
+router.patch('/shopping-list/add', authenticate, validateBody(schemas.shoppingSchema), ctrlWrapper(ctrl.addToShoppingList));
 
 router.patch('/shopping-list/remove', authenticate, validateBody(schemas.shoppingRemoveSchema), ctrlWrapper(ctrl.removeShopingItem));
 
